Initial 2d setup, getting the basics

--- a/Saved/Config/Windows/EditorUserSettings.ini
+++ b/Saved/Config/Windows/EditorUserSettings.ini
@@ -1,4 +1,9 @@
+[/Script/UnrealEd.ContentBrowserSettings]
+DisplayPluginFolders=False
+DisplayCollections=False
+
 [/Script/UnrealEd.LevelEditorPlaySettings]
+LastExecutedPlayModeType=PlayMode_Simulate
 GameGetsMouseControl=False
 MouseControlLabelPosition=LabelAnchorMode_TopLeft
 ViewportGetsHMDControl=False
@@ -14,12 +19,106 @@ RouteGamepadToSecondWindow=False
 ClientWindowHeight=480
 AdditionalServerGameOptions=
 AdditionalLaunchOptions=
-MultipleInstanceLastHeight=0
-MultipleInstanceLastWidth=0
+MultipleInstanceLastHeight=720
+MultipleInstanceLastWidth=1280
 LastExecutedLaunchDevice=WindowsNoEditor@CRACKHOUSE
 LastExecutedLaunchName=CRACKHOUSE
 
+[/Script/UnrealEd.LevelEditorViewportSettings]
+CurrentPosGridSize=0
+bInvertMiddleMousePan=False
+SnapToSurface=(bEnabled=False,SnapOffsetExtent=0.000000,bSnapRotation=True)
+PreserveNonUniformScale=False
+HoverHighlightIntensity=0.000000
+PreviewMeshes=/Engine/EditorMeshes/ColorCalibrator/SM_ColorCalibrator.SM_ColorCalibrator
+BillboardScale=1.000000
+TransformWidgetSizeAdjustment=0
+bSaveEngineStats=False
+MeasuringToolUnits=MeasureUnits_Centimeters
+
+[MRU]
+MRUItem0=K:/Documents/Unreal Projects/LudumDare/Content/2dLevelTest.umap
+
+[/Script/UnrealEd.MaterialEditorOptions]
+bUseUnsortedMenus=False
+bShowMobileStats=False
+
 [AssetEditorManager]
 CleanShutdown=False
+OpenAssetsAtExit=/Game/Sprites/TempGuy_Sprite.TempGuy_Sprite
+
+[DetailCategories]
+PlayerStart.TransformCommon=True
+PlayerStart.Object=True
+PlayerStart.Rendering=True
+PlayerStart.Input=True
+PlayerStart.Actor=True
+BP_Sky_Sphere_C.TransformCommon=True
+BP_Sky_Sphere_C.Default=True
+BP_Sky_Sphere_C.Override settings=True
+BP_Sky_Sphere_C.Rendering=True
+BP_Sky_Sphere_C.Input=True
+BP_Sky_Sphere_C.Actor=True
+AtmosphericFog.TransformCommon=True
+AtmosphericFog.Atmosphere=True
+AtmosphericFog.Lighting=True
+AtmosphericFog.Rendering=True
+AtmosphericFog.Tags=True
+AtmosphericFog.Actor=True
+PreviewMaterial.PhysicalMaterial=True
+PreviewMaterial.Material=True
+PreviewMaterial.Translucency=True
+PreviewMaterial.TranslucencySelfShadowing=True
+PreviewMaterial.Usage=True
+PreviewMaterial.Mobile=True
+PreviewMaterial.Tessellation=True
+PreviewMaterial.PostProcessMaterial=True
+PreviewMaterial.Lightmass=True
+PreviewMaterial.MaterialInterface=True
+PreviewMaterial.Thumbnail=True
+PaperSpriteActor.TransformCommon=True
+PaperSpriteActor.Materials=True
+PaperSpriteActor.Sprite=True
+PaperSpriteActor.Physics=True
+PaperSpriteActor.Collision=True
+PaperSpriteActor.Lighting=True
+PaperSpriteActor.PhysicsVolume=True
+PaperSpriteActor.Rendering=True
+PaperSpriteActor.Tags=True
+PaperSpriteActor.Activation=True
+PaperSpriteActor.Input=True
+PaperSpriteActor.Actor=True
+Texture2D.LevelOfDetail=True
+Texture2D.Texture=True
+Texture2D.Adjustments=True
+Texture2D.Compression=True
+Texture2D.Compositing=True
+PaperSprite.Sprite=True
+PaperSprite.Rendering=True
+PaperSprite.Collision=True
+
+[ContentBrowser]
+AssetDialog.ThumbnailSizeScale=0.100000
+AssetDialog.CurrentViewType=1
+
+[AssetEditorToolkitTabLocation]
+/Paper2D/DefaultSpriteMaterial.DefaultSpriteMaterial=0
+/Game/Textures/TempGup.TempGup=0
+/Game/Sprites/TempGuy_Sprite.TempGuy_Sprite=0
+/Game/Textures/TempGuy.TempGuy=0
+
+[MaterialEditor]
+LightDir=P=-39.999992 Y=27.499994 R=0.000000
+PrimType=1
+
+[PlacementMode]
+RecentlyPlaced=/Game/Sprites/PrototypeBox_Sprite.PrototypeBox_Sprite;
+RecentlyPlaced=/Script/Engine.PlayerStart;/Engine/Transient.ActorFactoryPlayerStart_0
+RecentlyPlaced=/Game/Sprites/TempGuy_Sprite.TempGuy_Sprite;
+RecentlyPlaced=/Game/Sprites/TestBackground_Sprite.TestBackground_Sprite;
+
+[DetailCategoriesAdvanced]
+PaperSprite.Collision=True
+PaperSprite.Rendering=True
 
 
