--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -49,4 +49,17 @@ AppliedTargetedHardwareClass=Desktop
 DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
 
+[/Script/EngineSettings.GameMapsSettings]
+EditorStartupMap=/Game/2dLevelTest
+LocalMapOptions=
+TransitionMap=
+bUseSplitscreen=True
+TwoPlayerSplitscreenLayout=Horizontal
+ThreePlayerSplitscreenLayout=FavorTop
+GameInstanceClass=/Script/Engine.GameInstance
+GameDefaultMap=/Game/2dLevelTest
+ServerDefaultMap=/Game/2dLevelTest
+GlobalDefaultGameMode=/Game/Blueprints/PaperGameMode.PaperGameMode_C
+GlobalDefaultServerGameMode=/Game/Blueprints/PaperGameMode.PaperGameMode_C
+
 
