--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -21,6 +21,7 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Sprint",Key=LeftShift,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="ToBackground",Key=W,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="ToForground",Key=S,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="MouseLeftClick",Key=LeftMouseButton,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +AxisMappings=(AxisName="MoveRight",Key=A,Scale=-1.000000)
 +AxisMappings=(AxisName="MoveRight",Key=D,Scale=1.000000)
 bAlwaysShowTouchInterface=False
