--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,4 +1,17 @@
 [URL]
+[/Script/EngineSettings.GameMapsSettings]
+EditorStartupMap=/Game/2dLevelTest
+LocalMapOptions=
+TransitionMap=
+bUseSplitscreen=True
+TwoPlayerSplitscreenLayout=Horizontal
+ThreePlayerSplitscreenLayout=FavorTop
+GameInstanceClass=/Script/Engine.GameInstance
+GameDefaultMap=/Game/2dLevelTest
+ServerDefaultMap=/Game/2dLevelTest
+GlobalDefaultGameMode=/Game/Blueprints/PaperGameMode.PaperGameMode_C
+GlobalDefaultServerGameMode=/Game/Blueprints/PaperGameMode.PaperGameMode_C
+
 [/Script/Engine.UserInterfaceSettings]
 RenderFocusRule=NavigationOnly
 DefaultCursor=None
@@ -31,10 +44,10 @@ r.CustomDepth=1
 r.DefaultFeature.Bloom=True
 r.DefaultFeature.AmbientOcclusion=True
 r.DefaultFeature.AmbientOcclusionStaticFraction=True
-r.DefaultFeature.AutoExposure=True
-r.DefaultFeature.MotionBlur=True
+r.DefaultFeature.AutoExposure=False
+r.DefaultFeature.MotionBlur=False
 r.DefaultFeature.LensFlare=True
-r.DefaultFeature.AntiAliasing=2
+r.DefaultFeature.AntiAliasing=0
 r.EarlyZPass=3
 r.EarlyZPassMovable=False
 r.DBuffer=False
@@ -46,20 +59,7 @@ UIScaleCurve=(EditorCurveData=(Keys=),ExternalCurve=None)
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
 AppliedTargetedHardwareClass=Desktop
-DefaultGraphicsPerformance=Maximum
-AppliedDefaultGraphicsPerformance=Maximum
-
-[/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/2dLevelTest
-LocalMapOptions=
-TransitionMap=
-bUseSplitscreen=True
-TwoPlayerSplitscreenLayout=Horizontal
-ThreePlayerSplitscreenLayout=FavorTop
-GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Game/2dLevelTest
-ServerDefaultMap=/Game/2dLevelTest
-GlobalDefaultGameMode=/Game/Blueprints/PaperGameMode.PaperGameMode_C
-GlobalDefaultServerGameMode=/Game/Blueprints/PaperGameMode.PaperGameMode_C
+DefaultGraphicsPerformance=Scalable
+AppliedDefaultGraphicsPerformance=Scalable
 
 
