--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,15 +1,28 @@
-
 [/Script/EngineSettings.GeneralProjectSettings]
 CompanyName=GP Production
 CopyrightNotice=Fill out your copyright notice in the Description page of Project Settings.
-Description=
+Description=Ludum32 Game
 Homepage=
 LicensingTerms=
 PrivacyPolicy=
-ProjectID=00000000000000000000000000000000
-ProjectName=
-ProjectVersion=
+ProjectID=0F5A09674EE8BD7B1B8BA69AC1C24C45
+ProjectName=Pillow To A Gunfight
+ProjectVersion=Alpha
 SupportContact=
 ProjectDisplayedTitle=
+
+[/Script/UnrealEd.ProjectPackagingSettings]
+BuildConfiguration=PPBC_Shipping
+StagingDirectory=(Path="K:/Documents/Unreal Projects/Packages")
+FullRebuild=True
+ForDistribution=True
+IncludeDebugFiles=False
+UsePakFile=True
+bGenerateChunks=False
+IncludePrerequisites=True
+IncludeCrashReporter=True
+InternationalizationPreset=English
+-CulturesToStage=en
++CulturesToStage=en
 
 
